<?xml version="1.0"?>
<package format="2">
  <name>example_msgs</name>
  <version>1.0.0</version>
  <description>A quick example to demonstrate what a messages repo looks like</description>
  <maintainer email="baxter26@purdue.edu">James Baxter</maintainer>
  <license>MIT</license>
  <author email="baxter26@purdue.edu">James Baxter</author>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <!-- is this needed? -->
  <!-- <build_export_depend>message_generation</build_export_depend> -->
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
