<?xml version="1.0"?>
<package format="2">
  <name>snake_tutorial</name>
  <version>1.0.0</version>
  <description>A tutorial on developing a basic set of ROS nodes to control the
    snakesim package</description>

  <maintainer email="autonomy@purdue.edu">Autonomous Robotics Club of Purdue</maintainer>
  <license>BSD 3 Clause</license>
  <url type="website">http://www.purduearc.com</url>
  <author email="baxter26@purdue.edu">James Baxter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python-angles</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>snakesim</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
